traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:17: error: ')' expected but '}' found.
  }
  ^